--- a/1168/Makefile
+++ b/1168/Makefile
@@ -1,2 +1,5 @@
 test:
-	@bash -c "diff <(cat input.txt | go run main.go) <(cat output.txt)" 
+	@bash -c "diff <(cat input.txt | go run main.go) <(cat output.txt)"
+
+publish:
+	@bash ../boilerplates/publish.sh
